Actualización de url's

--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                     </p>
                 </div>
                 <div class="social-media">
-                    <a href="https://www.instagram.com/jhose.condori.0fficial" class="social-media-icon"
+                    <a href="https://www.instagram.com/jhose.condori.0ficial" class="social-media-icon"
                         target="_blank">
                         <i class='bx bxl-facebook-circle'></i>
                     </a>
-                    <a href="https://www.instagram.com/jhose.condori.0fficial" class="social-media-icon"
+                    <a href="https://www.instagram.com/jhose.condori.0ficial" class="social-media-icon"
                         target="_blank">
                         <i class='bx bxl-instagram'></i>
                     </a>
