--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </p>
                 </div>
                 <div class="social-media">
-                    <a href="https://www.instagram.com/jhose.condori.0ficial" class="social-media-icon"
+                    <a href="https://web.facebook.com/jose0ficial" class="social-media-icon"
                         target="_blank">
                         <i class='bx bxl-facebook-circle'></i>
                     </a>
@@ -126,7 +126,7 @@
                     <a href="./" class="social-media-icon">
                         <i class='bx bxl-twitter'></i>
                     </a>
-                    <a href="./" class="social-media-icon">
+                    <a href="https://www.youtube.com/channel/UCcrkwb8SSiW8N37PKCIAHow" class="social-media-icon">
                         <i class='bx bxl-youtube'></i>
                     </a>
                 </div>
